--- a/source/index.html
+++ b/source/index.html
@@ -54,7 +54,7 @@
     <h1 class="visually-hidden">Cat Energy</h1>
     <section class="intro">
       <div class="intro__wrapper container">
-        <h2 class="intro__title theme__title">
+        <h2 class="intro__title theme__title theme__title--top">
           Функциональное<br> питание для котов
         </h2>
         <p class="intro__text">
@@ -70,7 +70,7 @@
     <section class="program">
       <h2 class="visually-hidden">Программы тренировок</h2>
       <div class="container">
-        <article class="program__item">
+        <article class="program__item program__item--slim">
           <h3 class="program__title">
             <span class="program__icon program__icon--slim"></span>
             Похудение
@@ -80,7 +80,7 @@
           </p>
           <a href="catalog.html" class="program__link">Каталог Slim</a>
         </article>
-        <article class="program__item">
+        <article class="program__item program__item--pro">
           <h3 class="program__title">
             <span class="program__icon program__icon--pro"></span>
             Набор массы
