Доделал стили главной страницы для планшетной версии

--- a/source/index.html
+++ b/source/index.html
@@ -114,7 +114,7 @@
           </li>
           <li class="feature__item feature__item--clock">
             <p class="feature__text theme__text">
-              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+              Уже через месяц наслаждайтесь изменениями к лучшему <br> вашего питомца!
             </p>
           </li>
         </ul>
@@ -126,19 +126,22 @@
         <p class="example__text theme__text">
           Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
         </p>
-        <div class="example__achievements">
-          <dl class="achievement">
-            <dt class="achievement__title">Снижение<br>  веса</dt>
-            <dd class="achievement__value">5 кг</dd>
-          </dl>
-          <dl class="achievement">
-            <dt class="achievement__title">Затрачено<br> времени</dt>
-            <dd class="achievement__value">60 дней</dd>
-          </dl>
+        <div class="example__row">
+          <div class="example__achievements">
+            <dl class="achievement">
+              <dt class="achievement__title">Снижение<br> веса</dt>
+              <dd class="achievement__value">5 кг</dd>
+            </dl>
+            <dl class="achievement">
+              <dt class="achievement__title">Затрачено<br> времени</dt>
+              <dd class="achievement__value">60 дней</dd>
+            </dl>
+          </div>
+          <p class="example__total">
+            Затраты на питание:
+            <span class="example__total-amount">15 000 руб.</span>
+          </p>
         </div>
-        <p class="example__total-amount">
-          Затраты на питание: 15 000 руб.
-        </p>
         <div class="example__comparison slider">
           <div class="slider__images full-width">
             <input type="radio" id="before" class="visually-hidden" name="image-toggle" checked>
@@ -162,14 +165,15 @@
         <p class="contacts__half contacts__greeting">
           Приглашаем <br> к сотрудничеству дилеров!
         </p>
-        <p class="contacts__half contacts__address">
-          ул. Большая <br> Конюшенная, д. 19/8 Санкт-Петербург
+        <p class="contacts__half contacts__address theme__text">
+          ул. Большая <br> Конюшенная, д. 19/8
+          <span class="contacts__city">Санкт-Петербург</span>
         </p>
       </div>
       <div class="contacts__map"></div>
     </div>
 
-    <div class="container">
+    <div class="page-footer__bottom container">
       <div class="page-footer__item page-logo page-logo--footer">
         <a class="page-logo__title">
           <img src="img/logo-footer.svg" alt="Cat Energy" width="128" height="24">
