Достилизовал планшетную версию сетки каталога.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -252,7 +252,7 @@
               <span class="additional-goods__volume">1 Упаковка (100 г)</span>
               <span class="additional-goods__price">100 Р.</span>
             </p>
-            <a href="#" class="theme__btn">Заказать</a>
+            <a href="#" class="additional-goods__btn theme__btn">Заказать</a>
           </li>
           <li class="additional-goods__item additional-goods">
             <h3 class="additional-goods__name">Питьевая вода</h3>
@@ -260,21 +260,21 @@
               <span class="additional-goods__volume">5 литров</span>
               <span class="additional-goods__price">50 Р.</span>
             </p>
-            <a href="#" class="theme__btn">Заказать</a></li>
+            <a href="#" class="additional-goods__btn theme__btn">Заказать</a></li>
           <li class="additional-goods__item additional-goods">
             <h3 class="additional-goods__name">Молоко</h3>
             <p class="additional-goods__details theme__text">
               <span class="additional-goods__volume">1 литр</span>
               <span class="additional-goods__price">100 Р.</span>
             </p>
-            <a href="#" class="theme__btn">Заказать</a></li>
+            <a href="#" class="additional-goods__btn theme__btn">Заказать</a></li>
           <li class="additional-goods__item additional-goods">
             <h3 class="additional-goods__name">Витамины</h3>
             <p class="additional-goods__details theme__text">
               <span class="additional-goods__volume">1 упаковка (30 г)</span>
               <span class="additional-goods__price">300 Р.</span>
             </p>
-            <a href="#" class="theme__btn">Заказать</a></li>
+            <a href="#" class="additional-goods__btn theme__btn">Заказать</a></li>
         </ul>
         <div class="additional-goods__promotion promotion">
           <p class="promotion__text">
