Доделал сетку всех планшетных версий

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -247,7 +247,7 @@
       <div class="container">
         <ul class="additional-goods__list">
           <li class="additional-goods__item">
-            <h3 class="additional-goods__name">Сахарозаменитель</h3>
+            <h3 class="additional-goods__name theme__block-title">Сахарозаменитель</h3>
             <p class="additional-goods__details theme__text">
               <span class="additional-goods__volume">1 Упаковка (100 г)</span>
               <span class="additional-goods__price">100 Р.</span>
@@ -255,21 +255,21 @@
             <a href="#" class="additional-goods__btn theme__btn">Заказать</a>
           </li>
           <li class="additional-goods__item additional-goods">
-            <h3 class="additional-goods__name">Питьевая вода</h3>
+            <h3 class="additional-goods__name theme__block-title">Питьевая вода</h3>
             <p class="additional-goods__details theme__text">
               <span class="additional-goods__volume">5 литров</span>
               <span class="additional-goods__price">50 Р.</span>
             </p>
             <a href="#" class="additional-goods__btn theme__btn">Заказать</a></li>
           <li class="additional-goods__item additional-goods">
-            <h3 class="additional-goods__name">Молоко</h3>
+            <h3 class="additional-goods__name theme__block-title">Молоко</h3>
             <p class="additional-goods__details theme__text">
               <span class="additional-goods__volume">1 литр</span>
               <span class="additional-goods__price">100 Р.</span>
             </p>
             <a href="#" class="additional-goods__btn theme__btn">Заказать</a></li>
           <li class="additional-goods__item additional-goods">
-            <h3 class="additional-goods__name">Витамины</h3>
+            <h3 class="additional-goods__name theme__block-title">Витамины</h3>
             <p class="additional-goods__details theme__text">
               <span class="additional-goods__volume">1 упаковка (30 г)</span>
               <span class="additional-goods__price">300 Р.</span>
@@ -291,11 +291,11 @@
   <footer class="page-footer">
     <div class="contacts">
       <div class="contacts__text-box">
-        <p class="contacts__half contacts__greeting">
-          Приглашаем <br> к сотрудничеству дилеров!
+        <p class="contacts__half contacts__greeting theme__block-title">
+          Приглашаем<br> к сотрудничеству дилеров!
         </p>
         <p class="contacts__half contacts__address theme__text">
-          ул. Большая <br> Конюшенная, д. 19/8
+          ул. Большая<br> Конюшенная, д. 19/8
           <span class="contacts__city">Санкт-Петербург</span>
         </p>
       </div>
