--- a/source/index.html
+++ b/source/index.html
@@ -162,11 +162,11 @@
   <footer class="page-footer">
     <div class="contacts">
       <div class="contacts__text-box contacts__text-box--white">
-        <p class="contacts__half contacts__greeting">
-          Приглашаем <br> к сотрудничеству дилеров!
+        <p class="contacts__half contacts__greeting theme__block-title">
+          Приглашаем<br> к сотрудничеству дилеров!
         </p>
         <p class="contacts__half contacts__address theme__text">
-          ул. Большая <br> Конюшенная, д. 19/8
+          ул. Большая<br> Конюшенная, д. 19/8
           <span class="contacts__city">Санкт-Петербург</span>
         </p>
       </div>
