--- a/source/form.html
+++ b/source/form.html
@@ -68,19 +68,19 @@
         <section class="form-unit form-unit--no-title">
           <h3 class="visually-hidden">Введите личные данные кота</h3>
           <p class="form-unit__row">
-            <label class="form-unit__item">
+            <label class="form-unit__item theme__block-title">
               <span class="form-unit__label">Имя:*</span>
               <input type="text" class="form-unit__input" name="Имя" placeholder="Барсик" required>
             </label>
           </p>
           <p class="form-unit__row">
-            <label class="form-unit__item">
+            <label class="form-unit__item theme__block-title">
               <span class="form-unit__label">Вес (кг):*</span>
               <input type="text" class="form-unit__input" name="Вес" placeholder="7" required>
             </label>
           </p>
           <p class="form-unit__row">
-            <label class="form-unit__item">
+            <label class="form-unit__item theme__block-title">
               <span class="form-unit__label">Возраст (лет):</span>
               <input type="text" class="form-unit__input" name="Возраст" placeholder="7">
             </label>
@@ -91,19 +91,19 @@
           <h3 class="visually-hidden">Выберите программу</h3>
           <ul class="form-unit__list">
             <li class="form-unit__list-item">
-              <label class="form-unit__item">
+              <label class="form-unit__item theme__block-title">
                 <input type="radio" name="Программа" value="Похудение" class="form-unit__radio visually-hidden" checked>
                 <span class="form-unit__label form-unit__label--radio">Похудение</span>
               </label>
             </li>
             <li class="form-unit__list-item">
-              <label class="form-unit__item">
+              <label class="form-unit__item theme__block-title">
                 <input type="radio" name="Программа" value="Набор массы" class="form-unit__radio visually-hidden">
                 <span class="form-unit__label form-unit__label--radio">Набор массы</span>
               </label>
             </li>
             <li class="form-unit__list-item">
-              <label class="form-unit__item">
+              <label class="form-unit__item theme__block-title">
                 <input type="radio" name="Программа" value="Не знаю (Нужен ваш совет)" class="form-unit__radio visually-hidden">
                 <span class="form-unit__label form-unit__label--radio">Не знаю (Нужен ваш совет)</span>
               </label>
@@ -116,14 +116,14 @@
         <h3 class="form-unit__title theme__subtitle"><span>Контактные данные <br> (владельца кота)</span></h3>
         <div class="container">
           <p class="form-unit__row">
-          <label class="form-unit__item">
+          <label class="form-unit__item theme__block-title">
             <span class="form-unit__label">E-mail:*</span>
             <input type="email" class="form-unit__input form-unit__input--icon
                   form-unit__input--email" name="E-mail" placeholder="kuklachev@gmail.com" required>
           </label>
         </p>
           <p class="form-unit__row">
-            <label class="form-unit__item">
+            <label class="form-unit__item theme__block-title">
               <span class="form-unit__label">Телефон:*</span>
               <input type="text" class="form-unit__input form-unit__input--icon
                   form-unit__input--phone" name="Телефон" placeholder="8 (960) 900-60-90" required>
@@ -136,7 +136,7 @@
         <h3 class="form-unit__title theme__subtitle"><span>Комментарий</span></h3>
         <div class="container">
           <p class="form-unit__row">
-            <label class="form-unit__item">
+            <label class="form-unit__item theme__block-title">
               <textarea class="form-unit__input form-unit__input--textarea" name="Комментарий"
                                 cols="28" rows="4" placeholder="Расскажите обо всех повадках кота"></textarea>
             </label>
@@ -145,29 +145,29 @@
       </section>
 
       <section class="form-unit">
-        <h3 class="form-unit__title theme__subtitle"><span>Дополнительно</span></h3>
+        <h3 class="form-unit__title form-unit__title--last theme__subtitle"><span>Дополнительно</span></h3>
         <div class="container">
-          <ul class="form-unit__list">
+          <ul class="form-unit__list form-unit__list--checks">
             <li class="form-unit__list-item">
-              <label class="form-unit__item">
+              <label class="form-unit__item theme__block-title">
                 <input type="checkbox" name="sweetener" class="form-unit__checkbox visually-hidden" checked>
                 <span class="form-unit__label form-unit__label--checkbox">Сахарозаменитель</span>
               </label>
             </li>
             <li class="form-unit__list-item">
-              <label class="form-unit__item">
+              <label class="form-unit__item theme__block-title">
                 <input type="checkbox" name="water" class="form-unit__checkbox visually-hidden">
                 <span class="form-unit__label form-unit__label--checkbox">Питьевая вода</span>
               </label>
             </li>
             <li class="form-unit__list-item">
-              <label class="form-unit__item">
+              <label class="form-unit__item theme__block-title">
                 <input type="checkbox" name="milk" class="form-unit__checkbox visually-hidden">
                 <span class="form-unit__label form-unit__label--checkbox">Молоко</span>
               </label>
             </li>
             <li class="form-unit__list-item">
-              <label class="form-unit__item">
+              <label class="form-unit__item theme__block-title">
                 <input type="checkbox" name="vitamins" class="form-unit__checkbox visually-hidden">
                 <span class="form-unit__label form-unit__label--checkbox">Витамины</span>
               </label>
@@ -177,7 +177,7 @@
       </section>
 
       <footer class="program-form__footer container">
-        <button class="theme__btn">Отправить заявку</button>
+        <button class="program-form__submit-btn theme__btn">Отправить заявку</button>
         <p class="program-form__footnote theme__text"><sup>*</sup> — Обязательные поля</p>
       </footer>
     </form>
@@ -186,11 +186,11 @@
   <footer class="page-footer">
     <div class="contacts">
       <div class="contacts__text-box">
-        <p class="contacts__half contacts__greeting">
-          Приглашаем <br> к сотрудничеству дилеров!
+        <p class="contacts__half contacts__greeting theme__block-title">
+          Приглашаем<br> к сотрудничеству дилеров!
         </p>
         <p class="contacts__half contacts__address theme__text">
-          ул. Большая <br> Конюшенная, д. 19/8
+          ул. Большая<br> Конюшенная, д. 19/8
           <span class="contacts__city">Санкт-Петербург</span>
         </p>
       </div>
