Доделал вёрстку сетки всех страниц для всех трёх вьюпортов

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -246,7 +246,7 @@
 
     <section class="additional-goods">
       <h2 class="additional-goods__title theme__subtitle"><span>Дополнительные товары</span></h2>
-      <div class="container">
+      <div class="additional-goods__wrapper container">
         <ul class="additional-goods__list">
           <li class="additional-goods__item">
             <h3 class="additional-goods__name theme__block-title">Сахарозаменитель</h3>
