--- a/source/form.html
+++ b/source/form.html
@@ -63,7 +63,7 @@
         </p>
       </div>
 
-      <div class="container">
+      <div class="program-form__wrapper container">
         <section class="form-unit form-unit--no-title">
           <h3 class="visually-hidden">Введите личные данные кота</h3>
           <p class="form-unit__row">
@@ -113,7 +113,7 @@
 
       <section class="form-unit">
         <h3 class="form-unit__title theme__subtitle"><span>Контактные данные <br> (владельца кота)</span></h3>
-        <div class="container">
+        <div class="program-form__wrapper container">
           <p class="form-unit__row">
           <label class="form-unit__item theme__block-title">
             <span class="form-unit__label">E-mail:*</span>
@@ -134,7 +134,7 @@
       <section class="form-unit">
         <h3 class="form-unit__title theme__subtitle"><span>Комментарий</span></h3>
         <div class="container">
-          <p class="form-unit__row">
+          <p class="form-unit__row form-unit__row--textarea">
             <label class="form-unit__item theme__block-title">
               <textarea class="form-unit__input form-unit__input--textarea" name="Комментарий"
                                 cols="28" rows="4" placeholder="Расскажите обо всех повадках кота"></textarea>
