Доделал состояния активных элементов по стайлгайду

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -232,7 +232,7 @@
               </table>
             </div>
           </div>
-          <div class="theme__disabled"><a href="#" class="theme__btn">Заказать</a></div>
+          <a href="#" class="theme__btn">Заказать</a>
         </article>
         <div class="catalog__item catalog__item--more">
           <div class="more-products">
