--- a/source/index.html
+++ b/source/index.html
@@ -161,7 +161,9 @@
           </div>
           <div class="slider__actions">
             <label for="before" class="slider__btn">Было</label>
-            <span class="slider__scale"></span>
+            <div class="slider__scale">
+              <div class="slider__grip"></div>
+            </div>
             <label for="after" class="slider__btn">Стало</label>
           </div>
         </div>
