Исправил мелкие косяки, добавил скрипт для меню

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -41,7 +41,7 @@
         <img class="page-logo__image" src="img/icon-logo-mobile.svg" alt="Супер-кот (лого)" width="33" height="38">
         <img class="page-logo__title" src="img/logo-mobile-header.svg" alt="Cat Energy" width="101" height="18">
       </a>
-      <nav class="page-nav">
+      <nav class="page-nav page-nav--no-js">
         <button class="page-nav__toggle" type="button">Показать меню</button>
         <ul class="page-nav__list">
           <li class="page-nav__item"><a class="page-nav__link" href="index.html">Главная</a></li>
@@ -236,6 +236,7 @@
         </article>
         <div class="catalog__item catalog__item--more">
           <div class="more-products">
+            <div class="more-products__icon"></div>
             <h3 class="more-products__title theme__block-title">Показать еще 100500 товаров</h3>
             <p class="more-products__text theme__text">На самом деле вкусов гораздо больше!</p>
           </div>
@@ -341,6 +342,8 @@
       </section>
     </div>
   </footer>
+
+  <script src="js/menu.js"></script>
 
   </body>
 </html>
