--- a/source/form.html
+++ b/source/form.html
@@ -43,7 +43,7 @@
       <img class="page-logo__image" src="img/icon-logo-mobile.svg" alt="Супер-кот (лого)" width="33" height="38">
       <img class="page-logo__title" src="img/logo-mobile-header.svg" alt="Cat Energy" width="101" height="18">
     </a>
-    <nav class="page-nav">
+    <nav class="page-nav page-nav--no-js">
       <button class="page-nav__toggle" type="button">Показать меню</button>
       <ul class="page-nav__list">
         <li class="page-nav__item"><a class="page-nav__link" href="index.html">Главная</a></li>
@@ -105,8 +105,7 @@
           </li>
           <li class="form-unit__list-item">
             <label class="form-unit__item theme__block-title">
-              <input type="radio" name="Программа" value="Не знаю (Нужен ваш совет)"
-                     class="form-unit__radio visually-hidden">
+              <input type="radio" name="Программа" value="Не знаю (Нужен ваш совет)" class="form-unit__radio visually-hidden">
               <span class="form-unit__label form-unit__label--radio">Не знаю (Нужен ваш совет)</span>
             </label>
           </li>
@@ -253,6 +252,8 @@
     </section>
   </div>
 </footer>
+
+<script src="js/menu.js"></script>
 
 </body>
 </html>
