--- a/source/index.html
+++ b/source/index.html
@@ -41,7 +41,7 @@
         <img class="page-logo__image" src="img/icon-logo-mobile.svg" alt="Супер-кот (лого)" width="33" height="38">
         <img class="page-logo__title" src="img/logo-mobile-header.svg" alt="Cat Energy" width="101" height="18">
       </a>
-      <nav class="page-nav">
+      <nav class="page-nav page-nav--no-js">
         <button class="page-nav__toggle" type="button">Показать меню</button>
         <ul class="page-nav__list page-nav__list--index">
           <li class="page-nav__item"><a class="page-nav__link page-nav__link--active">Главная</a></li>
@@ -222,5 +222,8 @@
       </section>
     </div>
   </footer>
+
+  <script src="js/menu.js"></script>
+
   </body>
 </html>
